Fix "No vertical gap with side post blocks when 'blockside' setting is 'Left side'" - ref: https://moodle.org/mod/forum/discuss.php?d=419201#p1689468.

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -1508,8 +1508,11 @@ div.questionbankwindow.block {
 }
 
 #block-region-side-post {
-    padding-right: 0;
     transition: all .5s ease-in-out;
+}
+
+.flex-row #block-region-side-post {
+    padding-right: 0;
 }
 
 #zoominicon {
